[package]
name = "chesto-rs-windows-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chesto-rs = { path = "../chesto-rs" }
dyn-clone = "1.0.17"
sdl2 = { version = "0.35.2", features = ["ttf","image","gfx","mixer","static-link", "use-pkgconfig"] }


[package.metadata.vita]
title_id = "CHESTOVIT"
title_name = "Simpel element based gui lib with sdl2"
